--- a/.ci_support/osx_arm64_numpy1.22python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_numpy1.22python3.9.____cpython.yaml
@@ -7,7 +7,7 @@ blas_impl:
 c_compiler:
 - clang
 c_compiler_version:
-- '15'
+- '16'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -19,7 +19,7 @@ cuda_compiler_version:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '15'
+- '16'
 libcblas:
 - 3.9 *netlib
 liblapack:
@@ -27,9 +27,11 @@ liblapack:
 libprotobuf:
 - 4.23.4
 llvm_openmp:
-- '15'
+- '16'
 macos_machine:
 - arm64-apple-darwin20.0.0
+mkl:
+- '2022'
 numpy:
 - '1.22'
 pin_run_as_build:
